<resources>
    <string name="app_name">FakeBook</string>
    <string name="name">姓名</string>
    <string name="password">密碼</string>
    <string name="namehint">請輸入姓名</string>
    <string name="passwordhint">請輸入密碼</string>
    <string name="register">註冊</string>
    <string name="login">登入</string>
    <string name="ok">確定註冊</string>
    <string name="back">返回登入</string>
    <string name="leavemsg">留言......</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
