<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_V_0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_V_0.45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_V_0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H_0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H_0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_H_0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/register_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/register_edit_name"
        app:layout_constraintBottom_toBottomOf="@id/register_edit_name"
        app:layout_constraintStart_toStartOf="@id/guideline_V_0.2"/>

    <EditText
        android:id="@+id/register_edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/namehint"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/guideline_V_0.45"
        app:layout_constraintEnd_toEndOf="@id/guideline_V_0.9"
        app:layout_constraintTop_toTopOf="@id/guideline_H_0.2"/>

    <TextView
        android:id="@+id/register_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/register_edit_password"
        app:layout_constraintBottom_toBottomOf="@id/register_edit_password"
        app:layout_constraintStart_toStartOf="@id/guideline_V_0.2"/>

    <EditText
        android:id="@+id/register_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/passwordhint"
        android:textSize="25sp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/guideline_V_0.45"
        app:layout_constraintEnd_toEndOf="@id/guideline_V_0.9"
        app:layout_constraintTop_toTopOf="@id/guideline_H_0.3"/>

    <Button
        android:id="@+id/register_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="@id/guideline_H_0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_V_0.2"/>

    <Button
        android:id="@+id/register_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintTop_toTopOf="@id/register_btn_back"
        app:layout_constraintStart_toEndOf="@id/register_btn_back"/>

</androidx.constraintlayout.widget.ConstraintLayout>